@@ -21,6 +21,7 @@
   extended mom parameter buffer space
   change pbs_mkdirs to use standard var names so that chroot installs work better (USC)
   torque.spec now has tcl/gui and wordexp enabled by default 
+  make sure attrs on job launch are sent to server (fixes session_id) (USC)
  
 2.0.0p5
 
